# echo-ridge-scoring

./: .gitignore  INITIAL.md  README.md  ROMAN_INTEGRATION_SUMMARY.md  TASK.md  cli.py  demo.jsonl  echo_ridge_scoring.db  example_usage.py  out1.jsonl  out2.jsonl  pyproject.toml  simple_sdk_test.py  test_integration.py  test_roman_components.py  test_sdk.py  weights.yaml
.claude/commands/: ultrathink-task.md
.serena/: project.yml
.serena/cache/python/: document_symbols_cache_v23-06-25.pkl
.serena/memories/: coding_style_and_conventions.md  project_overview.md  suggested_commands.md  task_completion_guidelines.md  tech_stack_and_architecture.md
PRPs/: echo-ridge-phases-4-10.md  finish-echo-ridge-scoring.md
docs/: runbook.md
src/: batch.py  calibration.py  drift.py  monitoring.py  normalization.py  persistence.py  risk_feasibility.py  schema.py  scoring.py  sdk.py
src/api/: __init__.py  dependencies.py  endpoints.py  main.py  models.py
src/echo_ridge_scoring/: __init__.py  blending.py  normalization.py  scoring.py  sdk.py
src/echo_ridge_scoring/adapters/: roman_adapter.py
src/roman_integration/: __init__.py
src/roman_integration/adapters/: __init__.py  roman_adapter.py
tests/: __init__.py  test_api.py  test_batch.py  test_blending.py  test_calibration.py  test_drift.py  test_non_zero_subscores.py  test_normalization.py  test_risk_feasibility.py  test_roman_adapter.py  test_scoring.py
