[tool.poetry]
name = "echo_ridge_scoring"
version = "0.1.0"
description = ""
authors = ["quinnhasse <quinn.hasse@gmail.com>"]
packages = [
  { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.116.1"
pydantic = "^2.11.7"
pytest = "^8.4.1"
httpx = "^0.28.1"
uvicorn = "^0.35.0"
numpy = "^2.3.2"
pandas = "^2.3.1"
typer = "^0.12.3"
sqlalchemy = "^2.0.36"
sqlmodel = "^0.0.22"
rich = "^13.7.1"
scipy = "^1.16.1"
scikit-learn = "^1.7.1"
structlog = "^25.4.0"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
